--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
+:root{
+  --green: #4CAF50;
+  --lighter-green:#5CDB95;
+  --big-border:5px;
+  --small-border:3px;
+  
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: 'Poppins', sans-serif;
+}
 .App {
-  background-color:  #5CDB95;
+  background-color: var(--lighter-green);
   display: flex;
   height: 100vh;
   width: 100%;
@@ -12,7 +27,7 @@
 .content{
   width: 95%;
   max-width: 800px;
-  height: 100vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -30,14 +45,14 @@
 
 .todo {
   background-color:white;
-  border: 1px solid black;
+  border-bottom: 1px solid #aaa;
   margin:0;
   color:black;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius:3px;
-  padding: 0 1rem;
+  border-radius:var(--small-border);
+  padding: 1rem;
   animation: entrance 700ms ease-out;
   animation-fill-mode: backwards;
 }
@@ -53,6 +68,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 50%;
+  
+}
+.text{
+  width: 50%;
+  text-align: left;
+  
 }
 .done{
   color: #777;
@@ -69,71 +91,81 @@
 #inp{
   background-color: rgb(27, 112, 137);
   border:0;
-  border-radius: 5px;
+  border-radius: var(--big-border);
   min-width: 70%;
   color: #fff;
   font-size: 1.2rem;
 }
 
-#btn:focus, #inp:focus{
+#sub-btn:focus, #inp:focus{
   outline: none;
-}
-#btn, #inp{
-  height:40%;
 }
 
 
 .btn{
   display: inline-block;
-  border-radius: 10px;
+  border-radius: var(--big-border);
   cursor: pointer;
-  font-weight: 700;
   transition-duration: 0.4s;
   text-align: center;
   text-decoration: none;
-  padding: 1em;
+  padding: 0.5rem;
   background-color: white;
-  border: 2px solid #4CAF50; /* Green */
 }
 
-#btn{
-  color: black;
+.right{
+  border-radius: 0 var(--big-border) var(--big-border) 0;
 }
-#btn:hover{
-  background-color: #4CAF50; /* Green */
+
+.left{
+  border-radius: var(--big-border) 0 0 var(--big-border);
+}
+
+#sub-btn{
+  color: black;
+  height: auto;
+  padding: 0.2em 0.5em;
+  border:2px solid var(--green);
+  font-weight: 700;
+}
+#sub-btn:hover{
+  background-color: var(--green); 
   color: white;
 }
 
 
-#inp{
-  
-  border-radius: 5px;
+#inp, #sub-btn{
+  border-radius: var(--big-border);
 }
 
 #del-btn{
-  min-width:30px;
-  min-height:30px;
   border:2px solid indianred;
-  background-color:white;
-  color: indianred;
-  border-radius:3px;
-  cursor: pointer;
-  transition:200ms all linear;
-}
-#del-btn:hover{
   background-color:indianred;
-  color: white;
+  color: black;
+  border-radius:var(--small-border);
+  cursor: pointer;
+
 }
+
+
+
+#del-btn:hover{
+  
+  color: indianred;
+  background-color: inherit;
+}
+
+
+
 .quant-btn{
+  background-color:#5CDB95;
   border:2px solid #5CDB95;
-  padding: 0.5rem;
 }
 .quant-btn:hover{
-  color: white;
-  background-color:#5CDB95; 
+  background-color: inherit;
+  
 }
 .quantity{
-  border-radius: 4px;
   padding: 4px 10px;
   background-color: #ccc;
 }
@@ -141,6 +173,8 @@
   display: flex;
   margin: 0 1rem;
 }
+
+
 @media (min-width:700px){
   .content{
     height: 80vh;
@@ -150,5 +184,7 @@
     font-size: 1.5rem;
     height: 50px;
   }
-
+  #sub-btn{
+    padding: 1em;
+  }
 }
